--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -10,3 +10,8 @@ body{
 img{
     max-width: 100%;
 }
+
+.ant-select-selection{
+    border-radius: @input-radius;
+    padding-left: @input-radius / 2;
+}
