--- a/src/styles/varible.less
+++ b/src/styles/varible.less
@@ -6,6 +6,9 @@
 @nav-width: 200px;
 @nav-collapsed-width: 52px;
 
+@input-height: 32px;
+@input-radius: @input-height / 2;
+
 .clearfix{
     overflow:auto;
     height:1%;
