--- a/src/styles/loading.less
+++ b/src/styles/loading.less
@@ -1,6 +1,4 @@
-
-  
-.loading{
+.loading {
     position: fixed;
     top: 0;
     right: 0;
@@ -8,39 +6,44 @@
     bottom: 0;
     background: rgba(0, 0, 0, 0.3);
     z-index: 9999;
-    .lds-hourglass {
+    .lds-facebook {
         display: inline-block;
-        position: absolute;
+        position: relative;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         width: 64px;
         height: 64px;
-      }
-      .lds-hourglass:after {
-        content: " ";
-        display: block;
-        border-radius: 50%;
-        width: 0;
-        height: 0;
-        margin: 6px;
-        box-sizing: border-box;
-        border: 26px solid @primary-color;
-        border-color:  @primary-color transparent  @primary-color transparent;
-        animation: lds-hourglass 1.2s infinite;
-      }
-      @keyframes lds-hourglass {
+    }
+    .lds-facebook div {
+        display: inline-block;
+        position: absolute;
+        left: 6px;
+        width: 13px;
+        background: @primary-color;
+        animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+    }
+    .lds-facebook div:nth-child(1) {
+        left: 6px;
+        animation-delay: -0.24s;
+    }
+    .lds-facebook div:nth-child(2) {
+        left: 26px;
+        animation-delay: -0.12s;
+    }
+    .lds-facebook div:nth-child(3) {
+        left: 45px;
+        animation-delay: 0;
+    }
+    @keyframes lds-facebook {
         0% {
-          transform: rotate(0);
-          animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+            top: 6px;
+            height: 51px;
         }
-        50% {
-          transform: rotate(900deg);
-          animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-        }
+        50%,
         100% {
-          transform: rotate(1800deg);
+            top: 19px;
+            height: 26px;
         }
-      }
+    }
 }
-
