添加网站ico和部分样式修改

--- a/src/styles/dashboard.less
+++ b/src/styles/dashboard.less
@@ -10,7 +10,7 @@
     position: fixed;
     width: @nav-width;
     height:  100vh;
-    background: #eee;
+    background: @sidebar-bg-color;
     transition: width ease 0.4s;
     &.collapsed{
         width: @nav-collapsed-width;
@@ -73,7 +73,7 @@
         position: absolute;
         top: 45%;
         left: 100%;
-        background: #eee;
+        background: @sidebar-bg-color;
         padding: 3px;
         padding-left: 1px;
     }
