--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,4 +1,5 @@
 @import './reset.less';
+// @import '~antd/dist/antd.less';
 @import './varible.less';
 @import './dashboard.less';
 @import './component.less';
