--- a/src/styles/varible.less
+++ b/src/styles/varible.less
@@ -1,7 +1,8 @@
-@primary-color: #1890ff;
+@primary-color: #39e;
 @active-color: #aaa;
-@light-primary-color: #18aeff;
-@nav-bg-color: #1890ff;
+@light-primary-color: #3af;
+
+@sidebar-bg-color: #f3f3f3;
 @active-nav-color: @primary-color;
 @nav-width: 200px;
 @nav-collapsed-width: 52px;
