--- a/src/styles/loading.less
+++ b/src/styles/loading.less
@@ -20,7 +20,7 @@
         position: absolute;
         left: 6px;
         width: 13px;
-        background: @primary-color;
+        background: @light-primary-color;
         animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
     }
     .lds-facebook div:nth-child(1) {
