--- a/src/styles/component.less
+++ b/src/styles/component.less
@@ -151,3 +151,15 @@
     display: flex;
     align-items: center;
 }
+
+.img-icon{
+    height: 60px;
+    width: 100px;
+    overflow: hidden;
+    text-align: center;
+    line-height: 60px;
+    img{
+        max-height: 60px;
+        width: auto;
+    }
+}
