--- a/src/styles/editor.less
+++ b/src/styles/editor.less
@@ -14,7 +14,8 @@
 
 .editor-content{
     border-top: none;
-    min-height: 700px;
+    height: 700px;
+    overflow-y: auto;
     padding: 10px 15px;
     border: 1px solid #eee;
     background: #fff;
