--- a/src/styles/component.less
+++ b/src/styles/component.less
@@ -1,14 +1,14 @@
 .login-form{
-    width: 350px;
+    width: 300px;
     margin: 0 auto;
     transform: translateY(-50%) translateX(-50%);
     left: 50%;
     position: absolute;
     top: 40%;
     .logo{
-        width: 300px;
+        width: 200px;
         margin: 0 auto;
-        margin-bottom: 25px;
+        margin-bottom: 80px;
     }
 }
 
@@ -22,7 +22,7 @@
 }
 
 .do-group{
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .do-input{
@@ -82,6 +82,9 @@
 .do-container{
     padding: 20px 30px 0 30px;
     margin: 0 auto;
+    @media screen and(max-width: 762px) {
+        padding: 10px 10px 0 10px;
+    }
 }
 
 .do-md-container{
@@ -160,5 +163,11 @@
     img{
         max-height: 60px;
         width: auto;
+    }
+}
+
+.hidden-xs{
+    @media screen and(max-width: 762px) {
+        display: none;
     }
 }
