--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,7 +1,10 @@
 @import './reset.less';
+
+@import './login.less';
 // @import '~antd/dist/antd.less';
 @import './varible.less';
 @import './dashboard.less';
 @import './component.less';
-@import './editor.less';
 @import './loading.less';
+@import './blogs.less';
+@import '~minieditor/index.less';
