--- a/src/styles/varible.less
+++ b/src/styles/varible.less
@@ -2,7 +2,7 @@
 @active-color: #aaa;
 @light-primary-color: #3af;
 
-@sidebar-bg-color: #f3f3f3;
+@sidebar-bg-color: #333;
 @active-nav-color: @primary-color;
 @nav-width: 200px;
 @nav-collapsed-width: 52px;
