--- a/src/styles/component.less
+++ b/src/styles/component.less
@@ -149,3 +149,17 @@
         display: none;
     }
 }
+
+.do-text-large {
+    font-size: 30px;
+    font-weight: 300;
+}
+
+.do-card {
+    padding: 20px;
+    margin-bottom: 20px;
+    display: inline-block;
+    width: 200px;
+    background-color: #fff;
+    margin-right: 20px;
+}
