--- a/src/styles/dashboard.less
+++ b/src/styles/dashboard.less
@@ -52,10 +52,11 @@
 
 .main-content {
   margin-left: @nav-width;
+  background-color: #f3f3f3;
   @media screen and(max-width: 762px) {
     margin-left: 0
   }
-  height: 100vh;
+  min-height: 100vh;
   transition: margin-left ease 0.4s;
 }
 
