--- a/src/styles/blogs.less
+++ b/src/styles/blogs.less
@@ -62,3 +62,64 @@
     }
   }
 }
+
+
+.blog-title {
+  text-transform: capitalize;
+  font-size: 34px;
+  font-weight: 100;
+  margin-bottom: 10px;
+  margin-top: 0px;
+  line-height: 1.2em;
+  color: rgb(51, 153, 255);
+}
+.blog-view-content,
+.DraftEditor-editorContainer {
+  font-size: 14px;
+  color: #444;
+
+  p {
+    margin: 0;
+    line-height: normal;
+    min-height: 20px;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
+    margin-bottom: 0.5em;
+    margin-top: 0;
+  }
+
+  h1 {
+    font-size: 2.2em;
+  }
+
+  h2 {
+    font-size: 1.8em;
+  }
+
+  h3 {
+    font-size: 1.5em;
+  }
+
+  h4 {
+    font-size: 1.2em;
+  }
+
+  pre {
+    max-width: 100%;
+    max-height: 100%;
+    margin: 10px 0;
+    padding: 15px;
+    overflow: auto;
+    background-color: #f1f2f3;
+    border-radius: 3px;
+    color: #666;
+    font-family: monospace;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16px;
+    word-wrap: break-word;
+    white-space: pre-wrap
+  }
+}
