--- a/src/styles/blogs.less
+++ b/src/styles/blogs.less
@@ -58,6 +58,20 @@
   color: rgb(51, 153, 255);
 }
 
+.blog-view-head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 60px;
+  margin: 30px 0 20px;
+  .blog-view-logo {
+    width: 120px;
+    display: inline-block;
+    position: relative;
+    top: -5px;
+  }
+}
+
 .blog-view-content,
 .DraftEditor-editorContainer {
   font-size: 14px;
