--- a/src/styles/blogs.less
+++ b/src/styles/blogs.less
@@ -58,6 +58,11 @@
   color: rgb(51, 153, 255);
 }
 
+.blog-list-head  {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .blog-view-head {
   display: flex;
   align-items: center;
@@ -65,7 +70,7 @@
   padding: 0 60px;
   margin: 30px 0 20px;
   .blog-view-logo {
-    width: 120px;
+    width: 90px;
     display: inline-block;
     position: relative;
     top: -5px;
