--- a/src/styles/component.less
+++ b/src/styles/component.less
@@ -163,3 +163,39 @@
     background-color: #fff;
     margin-right: 20px;
 }
+
+.do-tag {
+    background-color: #f3f3f3;
+    padding: 3px 7px 4px;
+    margin-right: 5px;
+    border-radius: 4px;
+    color: #888;
+    font-size: 12px;
+}
+
+.do-fix-btn {
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: @primary-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    text-align: center;
+    color: #fff;
+    box-shadow: 0 4px 20px -9px rgba(0,0,0,0.65);
+    transition: all ease 0.3s;
+    cursor: pointer;
+    &:hover {
+        background-color: @light-primary-color;
+        box-shadow: 0 4px 20px -5px rgba(0,0,0,0.65);
+    }
+    >span {
+        position: relative;
+        top: -4px;
+    }
+}
