--- a/src/styles/dashboard.less
+++ b/src/styles/dashboard.less
@@ -1,5 +1,6 @@
 .main-view {
   height: 100vh;
+  min-width: 1300px;
 }
 
 .main-nav {
@@ -7,6 +8,7 @@
   position: fixed;
   height: 100vh;
   background-color: @sidebar-bg-color;
+  z-index: 10;
 
   .nav-menu {
     box-sizing: border-box;
