--- a/src/styles/dashboard.less
+++ b/src/styles/dashboard.less
@@ -55,6 +55,7 @@
 .main-content {
   margin-left: @nav-width;
   background-color: #f3f3f3;
+  padding-bottom: 40px;
   @media screen and(max-width: 762px) {
     margin-left: 0
   }
