--- a/src/styles/blogs.less
+++ b/src/styles/blogs.less
@@ -77,20 +77,28 @@
   }
 }
 
+.editor-wrapper,
 .blog-view-content,
 .DraftEditor-editorContainer {
   font-size: 14px;
   color: #444;
+  line-height: 30px;
+
+  .bf-content * {
+    line-height: 1.6em;
+    margin-bottom: 0.5em;
+  }
 
   p {
-    margin: 0;
-    line-height: normal;
-    min-height: 20px;
+    line-height: 1.6em;
+    margin-bottom: 0.5em;
+    min-height: 1.6em;
   }
 
   h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
     margin-bottom: 0.5em;
+    line-height: 1.6em;
     margin-top: 0;
   }
 
