--- a/src/styles/blogs.less
+++ b/src/styles/blogs.less
@@ -95,10 +95,11 @@
   }
 }
 
-.DraftEditor-editorContainer{
+.editor-middle-width .DraftEditor-editorContainer{
   width: 720px;
   margin: 0 auto;
 }
+
 .blog-view-content,
 .DraftEditor-editorContainer{
   font-size: 14px;
