--- a/src/styles/blogs.less
+++ b/src/styles/blogs.less
@@ -95,16 +95,18 @@
   }
 }
 
-.editor-middle-width .DraftEditor-editorContainer{
+.editor-middle-width .DraftEditor-editorContainer {
   width: 720px;
   margin: 0 auto;
 }
 
 .blog-view-content,
-.DraftEditor-editorContainer{
+.bf-container .DraftEditor-editorContainer {
   font-size: 14px;
   color: #444;
-  span, div, pre {
+  span,
+  div,
+  pre {
     line-height: 1.6em;
     margin-bottom: 0.5em;
   }
@@ -123,7 +125,8 @@
     line-height: 1em;
     margin-bottom: 1em;
     margin-top: 1em;
-    div, span {
+    div,
+    span {
       line-height: 1em;
     }
   }
@@ -146,15 +149,17 @@
   }
   h1,
   h2 {}
+
+  .public-DraftEditor-content pre,
   pre {
     max-width: 100%;
     max-height: 100%;
     margin: 10px 0;
     padding: 15px;
     overflow: auto;
-    background-color: #f1f2f3;
-    border-radius: 3px;
-    color: #666;
+    background-color: #36312f;
+    border-radius: 4px;
+    color: #fff;
     font-family: monospace;
     font-size: 14px;
     font-weight: 400;
