--- a/src/styles/blogs.less
+++ b/src/styles/blogs.less
@@ -1,3 +1,5 @@
+@import './blog-reset.less';
+
 .blog-list-table {
   margin-top: 20px;
   .anticon-delete {
@@ -102,69 +104,5 @@
 
 .blog-view-content,
 .bf-container .DraftEditor-editorContainer {
-  font-size: 14px;
-  color: #444;
-  span,
-  div,
-  pre {
-    line-height: 1.6em;
-    margin-bottom: 0.5em;
-  }
-  p {
-    line-height: 1.6em;
-    margin-bottom: 0.5em;
-    min-height: 1.6em;
-  }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight: normal;
-    line-height: 1em;
-    margin-bottom: 1em;
-    margin-top: 1em;
-    div,
-    span {
-      line-height: 1em;
-    }
-  }
-  h1 {
-    font-size: 2.2em;
-  }
-  h2 {
-    font-size: 1.8em;
-  }
-  h3 {
-    font-size: 1.4em;
-    padding-left: 0.4em;
-    border-left: 4px solid @primary-color;
-  }
-  h4 {
-    font-size: 1.1em;
-    line-height: 1em;
-    font-weight: bold;
-    margin-bottom: 0.3em;
-  }
-  h1,
-  h2 {}
-
-  .public-DraftEditor-content pre,
-  pre {
-    max-width: 100%;
-    max-height: 100%;
-    margin: 10px 0;
-    padding: 15px;
-    overflow: auto;
-    background-color: #36312f;
-    border-radius: 4px;
-    color: #fff;
-    font-family: monospace;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 16px;
-    word-wrap: break-word;
-    white-space: pre-wrap
-  }
+  .blog-reset;
 }
