--- a/src/styles/component.scss
+++ b/src/styles/component.scss
@@ -7,9 +7,9 @@
     text-indent: 15px;
     width: 100%;
     border: 1px solid #ccc;
-    line-height: @input-height;
-    height: @input-height;
-    border-radius: @input-radius;
+    line-height: $input-height;
+    height: $input-height;
+    border-radius: $input-radius;
     &:focus{
         outline: none;
     }
@@ -42,14 +42,14 @@
 }
 
 .primary-btn{
-    background: @primary-color;
-    border: 1px solid @primary-color;
+    background: $primary-color;
+    border: 1px solid $primary-color;
     color: #fff;
     a{
         color: #fff;
     }
     &:hover{
-        background: @light-primary-color;
+        background: $light-primary-color;
     }
 }
 
@@ -79,9 +79,9 @@
 
 .action{
     font-size: 16px;
-    color: @primary-color;
+    color: $primary-color;
     &:hover{
-        color: @light-primary-color;
+        color: $light-primary-color;
         cursor: pointer;
     }
 }
@@ -94,7 +94,7 @@
     bottom: 0;
     background: #fff;
     min-height: 100vh;
-    .clearfix;
+    @include clearfix;
 }
 
 .do-title{
@@ -180,7 +180,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    background-color: @primary-color;
+    background-color: $primary-color;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -191,7 +191,7 @@
     transition: all ease 0.3s;
     cursor: pointer;
     &:hover {
-        background-color: @light-primary-color;
+        background-color: $light-primary-color;
         box-shadow: 0 4px 20px -5px rgba(0,0,0,0.65);
     }
     >span {
