--- a/src/styles/blog-reset.scss
+++ b/src/styles/blog-reset.scss
@@ -71,11 +71,6 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 16px;
-    code {
-      > div {
-        white-space: nowrap;
-      }
-    }
   }
 
   blockquote {
@@ -86,5 +81,9 @@
     border-left: 5px solid #ccc;
     color: #666;
     font-style: italic;
+  }
+
+  img {
+    max-width: 100%;
   }
 }
