--- a/src/styles/blog-reset.scss
+++ b/src/styles/blog-reset.scss
@@ -3,6 +3,15 @@
   color: #4a4a4a;
   padding-bottom: 0;
 
+  @media screen and (max-width: 768px) {
+    font-size: 14px;
+    line-height: 1.6;
+  }
+
+  *:not(a) {
+    color: #4a4a4a;
+  }
+
   h1,
   h2,
   h3,
@@ -17,6 +26,7 @@
   p,
   code,
   blockquote {
+    font-weight: normal;
     line-height: 1.8;
     margin: 0.5em 0;
     div,
@@ -25,9 +35,19 @@
       margin: 0;
     }
   }
-  p {
-    min-height: 1.5em;
+
+  h1,
+  h2,
+  h3,
+  h4 {
+    font-weight: 500;
+    color: #4a4a4a;
   }
+
+  p {
+    min-height: 1.6em;
+  }
+
   ul,
   ol {
     margin: 0.5em 0;
@@ -38,37 +58,41 @@
       margin-bottom: 0.5em;
     }
   }
+
   ul {
     list-style-type: disc;
   }
+
   ol {
     list-style-type: decimal;
   }
-  h1,
-  h2,
-  h3 {
-    font-weight: normal;
-  }
+
   h1 {
     font-size: 2.2em;
     margin: 30px 0;
   }
+
   h2 {
-    font-size: 1.6em;
+    font-size: 1.8em;
     margin: 25px 0;
   }
+
   h3 {
-    font-size: 1.3em;
-    padding-left: 0.4em;
-    line-height: 1;
-    margin: 20px 0;
-    border-left: 4px solid $primary-color;
+    font-size: 1.4em;
+    line-height: 1.1;
+    margin: 1em 0;
+    position: relative;
+    padding-left: 10px;
+    border-left: 6px solid $primary-color;
+    left: -16px;
   }
+
   h4 {
-    font-size: 1.2em;
+    font-size: 1.1em;
     line-height: 1em;
     margin: 15px 0;
   }
+
   pre {
     max-width: 100%;
     max-height: 100%;
@@ -80,6 +104,7 @@
     color: #fff;
     font-family: monospace;
     font-size: 14px;
+    font-weight: 400;
     line-height: 1.5;
     @media screen and (max-width: 720px) {
       box-sizing: content-box;
@@ -92,17 +117,87 @@
     code {
       line-height: 1.7;
       font-family: Menlo, Monaco, Consolas, Courier New, monospace;
+      color: #fff !important;
+
+      div {
+        white-space: nowrap;
+      }
     }
   }
+
   blockquote {
-    margin: 0 0 10px;
+    margin: 16px 0;
     padding: 15px 20px;
     background-color: #f1f2f3;
     border-left: 5px solid #ccc;
     color: #666;
     font-style: italic;
   }
+
   img {
     max-width: 100%;
+  }
+}
+
+.editor-wrapper {
+  border-radius: 10px;
+  border: 1px solid #ccc;
+
+  div[data-contents='true'] {
+    @include blog-reset;
+  }
+
+  .public-DraftEditorPlaceholder-inner {
+    position: relative;
+    font-size: 14px;
+    top: -8px;
+  }
+
+  .bf-content {
+    height: calc(100vh - 350px);
+    padding-bottom: 0;
+    .public-DraftEditor-content {
+      padding: 6px 15px !important;
+    }
+  }
+
+  .bf-controlbar {
+    padding: 8px;
+    box-shadow: none;
+
+    .control-item,
+    .dropdown-handler,
+    .dropdown-handler span,
+    .dropdown-handler i,
+    .control-item.button,
+    .control-item.button i:before {
+      height: 30px;
+      line-height: 30px;
+      min-width: 30px;
+      margin: 0;
+      padding: 0;
+      border-radius: 4px;
+    }
+    .text-color-dropdown .dropdown-handler,
+    .link-editor-dropdown .dropdown-handler,
+    .bf-emoji-dropdown .dropdown-handler {
+      padding-left: 0;
+    }
+    .text-color-dropdown {
+      width: 30px;
+      .bfi-text-color {
+        width: 30px;
+      }
+    }
+    .dropdown-handler {
+      padding-left: 10px;
+    }
+    .control-item.button.active {
+      color: $primary-color;
+    }
+    .separator-line {
+      height: 30px;
+      margin: 0 5px;
+    }
   }
 }
