fix: 修复bug，调整webpack

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -105,3 +105,11 @@
 .collapsed + .main-content {
   margin-left: $nav-collapsed-width;
 }
+
+.main-page-spin {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
