fix: 新版博客后台

--- a/src/styles/component.scss
+++ b/src/styles/component.scss
@@ -58,7 +58,7 @@
 }
 
 .do-container{
-    padding: 20px 60px 0 60px;
+    padding: 25px 30px;
     margin: 0 auto;
     @media screen and(max-width: 762px) {
         padding: 10px 20px 0 20px;
