--- a/src/styles/view-record.scss
+++ b/src/styles/view-record.scss
@@ -38,3 +38,10 @@
     margin-top: 20px !important;
   }
 }
+
+.view-record-whitelist-page {
+  .action-row {
+    margin-bottom: 20px;
+    text-align: right;
+  }
+}
